--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,3 +5,11 @@ body{
 h1{
     color: greenyellow;
 }
+
+.header{
+    text-align: center;
+    font-display: Arial;
+    color: #ffffff;
+    padding: 10px;
+    background: crimson;
+}
