Se actualiza font family

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,7 +8,7 @@ h1{
 
 .header{
     text-align: center;
-    font-display: Arial;
+    font-family: Arial;
     color: #ffffff;
     padding: 10px;
     background: crimson;
