--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,7 +3,7 @@ body{
 }
 
 h1{
-    color: blue;
+    color: yellow;
 }
 
 .header{
@@ -11,5 +11,5 @@ h1{
     font-family: Arial;
     color: #ffffff;
     padding: 10px;
-    background: yellow;
+    background: orange;
 }
